# try-sfml

./: CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: cmake.yml
src/: CMakeLists.txt  clicker.cpp  clicker.hpp  helloworld.cpp  helloworld.hpp  main.cpp
test/: CMakeLists.txt  testmain.cpp  testmain.hpp
